--- a/style.css
+++ b/style.css
@@ -11,19 +11,29 @@ form {
 }
 
 
-img.logoregis, img.avatar {
+img.logoregis{
   width: 50%;
-  margin-left: 2%;
   border-radius: 50%;
+  margin-left: 20%;
 }
+ img.avatar {
+  width: 50%;
+  border-radius: 50%;
+ 
+  }
+  .imgcontainer {
+    text-align: center;
+    margin: 10px 1 12px 0;
+    
+  
+  }
 
 
-
-.navi:hover, button:hover {
+.navi:hover, button:hover, .logout:hover {
   text-decoration: none;
   display: inline-block;
   padding: 8px 16px;
-  background-color: #ddd;
+  background-color: #98eaec;
   color: black;
   opacity: 0.8;
 }
@@ -51,7 +61,7 @@ input[type=text], input[type=password], button[type=submit], button[type=Registe
 }
 
 .logout {
-  padding: 1%;
+  padding: 3%;
   margin-top: 0;
 }
 
@@ -71,12 +81,7 @@ button[type=submit], button[type=Register] {
   background-color: #f44336;
 }
 
-.imgcontainer {
-  text-align: center;
-  margin: 10px 1 12px 0;
-  
 
-}
 
 .container {
   padding: 16px;
